# NextVendors

./: .dockerignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  RUNNING.md  aggressive_cleaner.py  analyze_hardcoded.py  auto_translate.py  clean_admin_vendors.py  clean_landing.py  clean_landing_final.py  clean_vendor_add_product.py  docker-compose.dev.full.yml  docker-compose.dev.yml  docker-compose.frontend-only.yml  docker-compose.prod.yml  docker-compose.yml  extract_translations.py  find_untranslated_landing.py  inject_ar_keys.py  list_strays.py  package.json  patch_admin_builder.py  patch_admin_plans.py  patch_category_showcase.py  patch_dynamic_banners.py  pyproject.toml  pyrightconfig.json  pytest.ini  sitecustomize.py  translate_admin_ads.py  translate_admin_dashboard.py  translate_admin_plans.py  translate_admin_product_edit.py  translate_admin_vendors.py  (+22 more)
.venv_clean/: pyvenv.cfg
alembic/: env.py
backend/: .env.example  DEV_SETUP.md  Dockerfile  Dockerfile.dev  README.md  README_START.md  __init__.py  check_db.py  conftest.py  gunicorn_conf.py  main.py  pyrightconfig.json  requirements-dev.txt  requirements.txt  run_server.py  seed_out.txt  seed_out2.txt  test_reg.py  test_rereg.py  update_schema.py
docs/: class_diagrams.md
frontend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  QUICKSTART.md  README.md  README_E2E.md  README_FRONTEND.md  build_output.txt  build_output2.txt  index.html  nginx.conf  package.json  playwright.config.ts  tailwind.config.js  (+2 more)
(+486 files in other folders)
