[tool.poetry]
name = "ecommerce-store"
version = "0.1.0"
description = "Ecommerce store backend + frontend (dev environment)"
authors = ["dev <dev@example.com>"]

[tool.black]
line-length = 88
target-version = ['py312']
skip-string-normalization = true

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
extend-exclude = ["frontend", "node_modules"]

[tool.ruff.per-file-ignores]
"backend/scripts/*.py" = ["E402", "F811"]
"backend/tests/**.py" = ["E402"]
"backend/conftest.py" = ["E402"]

[tool.coverage.run]
branch = true
source = ["backend", "app"]

[tool.pyright]
include = ["backend"]
exclude = ["**/node_modules", "**/__pycache__", "frontend"]
extraPaths = ["./backend"]
typeCheckingMode = "basic"
reportMissingImports = "none"
reportGeneralTypeIssues = "none"
reportOptionalSubscript = "none"
reportOptionalMemberAccess = "none"
reportOptionalCall = "none"
reportArgumentType = "none"
reportFunctionMemberAccess = "none"
reportAttributeAccessIssue = "none"
reportMissingModuleSource = "none"
reportUnusedImport = "none"
reportUnusedVariable = "none"
reportUndefinedVariable = "none"
